[package]
name = "backend"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"

serde = "1.0.104"
serde_json = "1.0.48"

log = "0.4.8"
slog = "2.5.2"
slog-async = "2.4.0"
slog-term = "2.5.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"

uuid = { version = "0.8", features = ["serde", "v4"] }

diesel = { version = "1.4.3", features = ["postgres"] }
rand = "0.7.3"
