[package]
name = "backend"
version = "0.1.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.10.1"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.7.3"
chrono = {version = "0.4.11", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
